Bug 63559, attributes are lost on XHTML elements if the document is loaded as data. r=jst, sr=vidur.